Add/update new code or files

--- a/src/core/configuration/config.json
+++ b/src/core/configuration/config.json
@@ -7,10 +7,8 @@
         "database": "pulse"
     },
     "FmpApi": {
-        "uri": "https://financialmodelingprep.com/api/v3/", 
-        "key": "?apikey=304459a7a227a31923b63192971bc245",
-        "sp500": "sp500_constituent",
-        "dowjones": "dowjones_constituent",
-        "nasdaq":  "nasdaq_constituent"
+        "uri": "https://financialmodelingprep.com/api/v3/",
+        "key": "apikey=304459a7a227a31923b63192971bc245",
+        "from_date": "2023-09-20"
     }
 }
